--- a/file.yaml
+++ b/file.yaml
@@ -314,7 +314,7 @@ stages:
             displayName: "Scan Cluster Config"
             # enabled: ${{ parameters.runCompletePipeline}}
             inputs:
-              azureSubscription: "aks-spn-ca"
+              connectedServiceName: "aks-spn-ca"
               scriptType: "bash"
               scriptLocation: "inlineScript"
               inlineScript: |
